RESOLVED FIXED36587
Web Inspector: Expect console object wrapping to fail.
https://bugs.webkit.org/show_bug.cgi?id=36587
Summary Web Inspector: Expect console object wrapping to fail.
Pavel Feldman
Reported 2010-03-25 02:49:36 PDT
This can happen if page overrides some basic prototypes.
Attachments
[PATCH] Proposed fix. (4.20 KB, patch)
2010-03-25 03:18 PDT, Pavel Feldman
timothy: review+
Pavel Feldman
Comment 1 2010-03-25 03:18:46 PDT
Created attachment 51615 [details] [PATCH] Proposed fix.
Timothy Hatcher
Comment 2 2010-03-25 04:34:39 PDT
Comment on attachment 51615 [details] [PATCH] Proposed fix. > + // FIXME(33716) Please add a comment with the FIXME, not just the bug number.
Pavel Feldman
Comment 3 2010-03-25 05:20:04 PDT
Landed with comment addressed. Committing to http://svn.webkit.org/repository/webkit/trunk ... M WebCore/ChangeLog M WebCore/inspector/InjectedScript.cpp M WebCore/inspector/front-end/InjectedScript.js Committed r56532
Note You need to log in before you can comment on or make changes to this bug.