2010-03-25  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Timothy Hatcher.

        Web Inspector: Expect console object wrapping to fail.

        https://bugs.webkit.org/show_bug.cgi?id=36587

        * inspector/front-end/InjectedScript.js:
        (injectedScriptConstructor):


Canonical link: https://commits.webkit.org/47826@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56532 268f45cc-cd09-0410-ab3c-d52691b4dbfc